add new app rss-reader

--- a/apps/rss-reader.yml
+++ b/apps/rss-reader.yml
@@ -1,18 +1,20 @@
 name: rss-reader
-description:
-icon: 
+description: read you favorit rss/atom feeds
+icon: https://github.com/strukturart/rss-reader/blob/master/application/icons/icon-112-112.png
 # screenshots are optional
 screenshots:
+- https://github.com/strukturart/rss-reader/blob/master/images/image-1.png
+- https://github.com/strukturart/rss-reader/blob/master/images/image-2.png
   
 # website is optional
-# website: 
+# website: https://github.com/strukturart/rss-reader
 # git repo is optional
-git_repo: 
+git_repo: https://github.com/strukturart/rss-reader
 download:
-  url: 
-  version:
+  url: https://github.com/strukturart/rss-reader/blob/master/build/rss-reader.zip
+  version: "1.0"
 author: 
 maintainer: 
 meta:
-  tags: 
-  category:
+  tags: news
+  category: news
