--- a/_generator/package.json
+++ b/_generator/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "fs-extra": "^8.1.0",
+    "is-url-superb": "^3.0.0",
     "js-yaml": "^3.13.1"
   }
 }
