--- a/apps/wikipedia-search.yml
+++ b/apps/wikipedia-search.yml
@@ -1,18 +1,19 @@
 name: wikipedia-search
-description: "With this app you can search within wikipedia"
+description: |
+  With this app you can search within wikipedia
 icon: https://github.com/strukturart/wikipedia-search/blob/master/application/icons/icon-56-56.png
 # screenshots are optional
 screenshots:
-  
+license: MIT
 # website is optional
 website: https://github.com/strukturart/wikipedia-search
 # git repo is optional
 git_repo: https://github.com/strukturart/wikipedia-search
-download: https://github.com/strukturart/wikipedia-search/blob/master/build/wikipedia.zip
+download: 
   url: https://github.com/strukturart/wikipedia-search
-  version: 1.0
+  version: "1.0"
 author: strukturart<https://github.com/strukturart>
-maintainer: strukturart<https://github.com/strukturart>
+maintainer:  perry<https://github.com/strukturart>
 meta:
   tags: search,wikipedia
   category: search,wikipedia
