--- a/apps/rss-reader.yml
+++ b/apps/rss-reader.yml
@@ -5,7 +5,7 @@ icon: https://github.com/strukturart/rss-reader/blob/master/application/icons/ic
 screenshots:
 - https://github.com/strukturart/rss-reader/blob/master/images/image-1.png
 - https://github.com/strukturart/rss-reader/blob/master/images/image-2.png
-  
+license: MIT
 # website is optional
 # website: https://github.com/strukturart/rss-reader
 # git repo is optional
