Update .gitlab-ci.yml in order to fix #7

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,3 +14,10 @@ pages:
       - public
   only:
     - master
+
+test:
+  script:
+    - cd _generator
+    - npm ci
+    - node .
+  except: master
