--- a/apps/rss-reader.yml
+++ b/apps/rss-reader.yml
@@ -1,6 +1,6 @@
 name: rss-reader
 description: read you favorit rss/atom feeds
-icon: https://github.com/strukturart/rss-reader/blob/master/application/icons/icon-112-112.png
+icon: https://github.com/strukturart/rss-reader/blob/master/images/logo.png
 # screenshots are optional
 screenshots:
 - https://github.com/strukturart/rss-reader/blob/master/images/image-1.png
@@ -13,8 +13,8 @@ git_repo: https://github.com/strukturart/rss-reader
 download:
   url: https://github.com/strukturart/rss-reader/blob/master/build/rss-reader.zip
   version: "1.0"
-author:  strukturart<https://github.com/strukturart>
-maintainer: strukturart<https://github.com/strukturart>
+author:  perry<https://github.com/strukturart>
+maintainer: perry<https://github.com/strukturart>
 meta:
   tags: news
   categories:
