Update linktree.yml (Changed the author because Ivan Alex-HC created the app)

--- a/apps/linktree.yml
+++ b/apps/linktree.yml
@@ -11,8 +11,8 @@ license: Free
 download:
   url: https://github.com/musky603/E-M-Dictionary/blob/build/bhackerslink.zip?raw=true
   version: "0.0.1"
-author:  Fanofgk<https://bananahackers.net>
-maintainer: Fanofgk<https://bananahackers.net>
+author: Ivan<https://bananahackers.net>
+maintainer: Ivan<https://bananahackers.net>
 meta:
   tags: Bhackers; KaiOS
   categories:
