test new donation button

--- a/apps/osm-map.yml
+++ b/apps/osm-map.yml
@@ -22,6 +22,7 @@ download:
   version: "1.0.0"
 author: perry<https://github.com/strukturart>
 maintainer:  perry<https://github.com/strukturart>
+donation: https://www.buymeacoffee.com/vj6Q8lR
 meta:
   tags: map; openstreatmap; osm; maps; travel;
   categories: 
