add new appData / validation / documentaion

--- a/example/app.template.yml
+++ b/example/app.template.yml
@@ -15,7 +15,10 @@ type:
 license:
 author: 
 maintainer: 
+#donation is optional
 donation:
+has_ads:
+has_tracking:
 meta:
   tags: 
   categories:
