--- a/apps/rss-reader.yml
+++ b/apps/rss-reader.yml
@@ -15,6 +15,10 @@ download:
   version: "1.0"
 author:  perry<https://github.com/strukturart>
 maintainer: perry<https://github.com/strukturart>
+has_tracking: false
+has_ads: false
+# donation is optional
+donation: https://www.buymeacoffee.com/vj6Q8lR
 meta:
   tags: news
   categories:
