--- a/apps/wikipedia-search.yml
+++ b/apps/wikipedia-search.yml
@@ -14,6 +14,10 @@ download:
   version: "1.0"
 author: strukturart<https://github.com/strukturart>
 maintainer:  perry<https://github.com/strukturart>
+has_tracking: false
+has_ads: false
+# donation is optional
+donation: https://www.buymeacoffee.com/vj6Q8lR
 meta:
   tags: search; wikipedia
   categories:
