--- a/apps/xrick.yml
+++ b/apps/xrick.yml
@@ -17,6 +17,10 @@ download:
   version: "05.05.04"
 author: pelya <x.pelya.x@gmail.com>
 maintainer: pelya <x.pelya.x@gmail.com>
+has_tracking: false
+has_ads: false
+# donation is optional
+donation:
 meta:
   tags: platformer;
   categories:
