--- a/apps/wikipedia-search.yml
+++ b/apps/wikipedia-search.yml
@@ -10,7 +10,7 @@ website: https://github.com/strukturart/wikipedia-search
 # git repo is optional
 git_repo: https://github.com/strukturart/wikipedia-search
 download: 
-  url: https://github.com/strukturart/wikipedia-search/blob/master/build/wikipedia.zip
+  url: https://github.com/strukturart/wikipedia-search/blob/master/build/wikipedia.zip?raw=true
   version: "1.0"
 author: strukturart<https://github.com/strukturart>
 maintainer:  strukturart<https://github.com/strukturart>
