update donation adress

--- a/apps/osm-map.yml
+++ b/apps/osm-map.yml
@@ -24,7 +24,7 @@ author: perry<https://github.com/strukturart>
 maintainer:  perry<https://github.com/strukturart>
 has_tracking: false
 has_ads: false
-donation: https://www.buymeacoffee.com/vj6Q8lR
+donation: https://paypal.me/strukturart
 meta:
   tags: map; openstreatmap; osm; maps; travel;
   categories: 
