--- a/apps/rss-reader.yml
+++ b/apps/rss-reader.yml
@@ -18,7 +18,7 @@ maintainer: perry<https://github.com/strukturart>
 has_tracking: false
 has_ads: false
 # donation is optional
-donation: https://www.buymeacoffee.com/vj6Q8lR
+donation: https://paypal.me/strukturart
 meta:
   tags: news
   categories:
