--- a/apps/wikipedia-search.yml
+++ b/apps/wikipedia-search.yml
@@ -17,7 +17,7 @@ maintainer:  strukturart<https://github.com/strukturart>
 has_tracking: false
 has_ads: false
 # donation is optional
-donation: https://www.buymeacoffee.com/vj6Q8lR
+donation: https://paypal.me/strukturart
 meta:
   tags: search; wikipedia
   categories:
