--- a/apps/tiktokv3.yml
+++ b/apps/tiktokv3.yml
@@ -1,6 +1,6 @@
 name: TikTok
 description: Enjoy the experience of Cringy Social Community without any login and just need to explore search and trending
-icon: https://github.com/strukturart/wikipedia-search/blob/master/application/icons/icon-56-56.png?raw=true
+icon: https://gitlab.com/musky603/bh-apps/-/raw/master/tiktok.png
 # screenshots are optional
 # screenshots:
 license: Free
