--- a/apps/tiktokv3.yml
+++ b/apps/tiktokv3.yml
@@ -1,4 +1,4 @@
-name: TikTok
+name: TikkTok
 description: Enjoy the experience of Cringy Social Community without any login and just need to explore search and trending
 icon: https://gitlab.com/musky603/bh-apps/-/raw/master/tiktok.png
 # screenshots are optional
