--- a/apps/kaidiremote.yml
+++ b/apps/kaidiremote.yml
@@ -1,4 +1,4 @@
-name: Kaidi Remote (Beta)
+name: Kaidi Remote
 description: The Kodi Remote app for KaiOS.
 icon: https://github.com/jkelol111/kaidi/raw/master/docs/icons/kaidi_112.png
 screenshots:
@@ -8,8 +8,8 @@ screenshots:
 website: https://jkelol111.github.io/kaidi
 git_repo: https://github.com/jkelol111/kaidi
 download:
-  url: https://github.com/jkelol111/kaidi/releases/download/v0.4.8-beta/kaidi-0.4.8-beta-omnisd.zip
-  version: "0.4.8"
+  url: https://github.com/jkelol111/kaidi/releases/download/v1.0.0/kaidi-1.0.0-stable-omnisd.zip
+  version: "1.0.0"
 type: privileged
 license: "GPLv3"
 author: jkelol111
