--- a/apps/kaidiremote.yml
+++ b/apps/kaidiremote.yml
@@ -8,10 +8,10 @@ screenshots:
 website: https://jkelol111.github.io/kaidi
 git_repo: https://github.com/jkelol111/kaidi
 download:
-  url: https://github.com/jkelol111/kaidi/releases/download/v1.0.0/kaidi-1.0.0-stable-omnisd.zip
-  version: "1.0.0"
+  url: https://github.com/jkelol111/kaidi/releases/download/v1.0.2/kaidi-1.0.2-stable-omnisd.zip
+  version: "1.0.2"
 type: privileged
-license: "GPLv3"
+license: GPLv3
 author: jkelol111
 maintainer: jkelol111
 donation: https://paypal.me/jkelol111
