--- a/apps/vm-irc.yml
+++ b/apps/vm-irc.yml
@@ -13,7 +13,7 @@ maintainer:  Farooq Karimi Zadeh <hapu@riseup.net>
 has_tracking: false
 has_ads: false
 # donation is optional
-donation: 
+donation: http://bitcoinshell.mooo.com/users/farooqkz/donate.html
 meta:
   tags: irc; freenode; irc-client; simple-irc-client; minimal-irc-client;
   categories: 
