--- a/apps/tiktokv3.yml
+++ b/apps/tiktokv3.yml
@@ -1,9 +1,9 @@
-name: TikkTok
+name: TikkToc
 description: Enjoy the experience of Cringy Social Community without any login and just need to explore search and trending
 icon: https://gitlab.com/musky603/bh-apps/-/raw/master/tiktok.png
 # screenshots are optional
 # screenshots:
-license: Free
+license: Proprietary
 # website is optional
 website: https://tikster.net
 # git repo is optional
@@ -13,10 +13,10 @@ download:
   version: "1.3"
 author: Fanofgk<http://easyonlineshop.rf.gd>
 maintainer:  Fanofgk<http://easyonlineshop.rf.gd>
-#Not at all
-has_tracking: false
-#I swear on KaiOS there is no ads for sure
-has_ads: false
+ #As always we cant trust app origin country so
+has_tracking: true
+#I swear there is no ads by me but we cant trust on its origin country so
+has_ads: true
 # donation is optional
 donation: https://www.paypal.me/IDevik
 meta:
