--- a/apps/terminal.yml
+++ b/apps/terminal.yml
@@ -13,7 +13,7 @@ maintainer: Affe Null <affenull2345@gmail.com>
 has_ads: false
 has_tracking: false
 meta:
-    tags: 
+    tags: tool
     categories:
      - utility
 type: certified
