--- a/categories/education.yml
+++ b/categories/education.yml
@@ -1,4 +1,4 @@
 name: Education
 description: Apps that provide access to Education sources.
 ## Font Awesome icon name (fontawesome.com)
-icon: fas fa_book_reader
+icon: fas fa-book-reader
