--- a/categories/games.yml
+++ b/categories/games.yml
@@ -1,4 +1,4 @@
 name: Games
 description: Test your finger speed.
 ## Font Awesome icon name (fontawesome.com)
-icon: fas fa_gamepad
+icon: fas fa-gamepad
