--- a/categories/travel.yml
+++ b/categories/travel.yml
@@ -1,4 +1,4 @@
 name: Travel
 description: Useful tools for traveling
 ## Font Awesome icon name (fontawesome.com)
-icon: fas fa_plane
+icon: fas fa-plane
