--- a/apps/shell-commands.yml
+++ b/apps/shell-commands.yml
@@ -1,5 +1,5 @@
 name: shell-commands
-description: With this app you can execute saved shell commands. e.g . regular downloads / uploads
+description: With this app you can execute saved shell commands. e.g . cUrl  regular downloads / uploads
 icon: https://raw.githubusercontent.com/strukturart/rss-reader/master/images/logo.png
 # screenshots are optional
 screenshots:
