download all images and rewrite the urls in data.json, also add a check if images are in an suported format

--- a/apps/zipper.yml
+++ b/apps/zipper.yml
@@ -1,6 +1,6 @@
 name: Zipper
 description: Zip and unzip files on your device. There is no internet connection needed!
-icon: hhttps://raw.githubusercontent.com/canicjusz/Zipper/master/minified/img/icons/Zipper_128.png
+icon: https://raw.githubusercontent.com/canicjusz/Zipper/master/minified/img/icons/Zipper_128.png
 # screenshots are optional
 # screenshots:
 # website is optional
