--- a/apps/usersweather.yml
+++ b/apps/usersweather.yml
@@ -2,7 +2,8 @@ name: UsersWeather
 description: Fetch local weather information using wttr.in
 icon: https://raw.githubusercontent.com/user18130814200115-2/User-s-Weather/master/weather/assets/icons/icon-112-112.png
 # screenshots are optional
-screenshots: https://raw.githubusercontent.com/user18130814200115-2/User-s-Weather/master/2020-08-12-15-54-57.png
+screenshots:
+- https://raw.githubusercontent.com/user18130814200115-2/User-s-Weather/master/2020-08-12-15-54-57.png
 # website is optional
 # website: 
 # git repo is optional
