--- a/apps/osm-map.yml
+++ b/apps/osm-map.yml
@@ -1,11 +1,9 @@
 name: Open Street Map
-description: |
- This is an Open Street Map app for the Nokia 81104G.
- Features
-  - Map
-  - Send your position by sms
-  - Import Tracks (geoJson)
-  - Save your position
+description: >
+  Open Street Map app  
+  This app is a good companion for your outdoor adventures. 
+  You can load different types of maps, set your own markers, import gpx / geojson files 
+  or send your position to friends and a few other helpful features.
 icon: https://raw.githubusercontent.com/strukturart/osm-map/master/images/logo.png
 # screenshots are optional
 screenshots:
@@ -19,7 +17,7 @@ license: MIT
 git_repo: https://github.com/strukturart/osm-map
 download:
   url: https://github.com/strukturart/osm-map/raw/master/build/osm-map.zip
-  version: "1.0.0"
+  version: "1.1.0"
 author: perry<https://github.com/strukturart>
 maintainer:  perry<https://github.com/strukturart>
 has_tracking: false
