--- a/apps/wallacetoolbox.yml
+++ b/apps/wallacetoolbox.yml
@@ -9,8 +9,8 @@ icon: https://gitlab.com/suborg/wallace-toolbox/-/raw/master/img/werewolf-112.pn
 # git repo is optional
 git_repo: https://gitlab.com/suborg/wallace-toolbox
 download:
-  url: https://cloud.disroot.org/s/obk8K7QCb2LokE8/download 
-  version: 0.0.4
+  url: https://cutt.ly/GfKwUnJ
+  version: 0.0.5
 type: root
 license: Unknown
 author: Luxferre/Suborg/Nihilist
