--- a/apps/podlp.yml
+++ b/apps/podlp.yml
@@ -1,5 +1,5 @@
 name: PodLP
-description: Discover, listen, and subscribe to podcasts both online and offline.
+description: Discover, listen, download, and subscribe to podcasts both online and offline.
 icon: "https://app.podlp.com/d/podlp-logo-144.png"
 screenshots:
   - "https://app.podlp.com/d/screenshot/home.png"
@@ -9,8 +9,8 @@ screenshots:
   - "https://app.podlp.com/d/screenshot/podcast_play.png"
 website: "https://podlp.com"
 download:
-  url: "https://app.podlp.com/d/PodLP_1.0.3.zip"
-  version: "1.0.3"
+  url: "https://app.podlp.com/d/PodLP_1.3.3.0.zip"
+  version: "1.3.3"
 type: privileged
 license: Unknown
 author: Tom Barrasso <support@podlp.com>
