--- a/apps/bHackersStore.yml
+++ b/apps/bHackersStore.yml
@@ -11,7 +11,7 @@ license: MIT
 git_repo: https://github.com/strukturart/bHacker-store-client
 download:
   url: https://github.com/strukturart/bHacker-store-client/releases/download/0.8/bhacker-store.zip
-  version: "1.1.0"
+  version: "0.8"
 author: perry<https://github.com/strukturart>
 maintainer:  perry<https://github.com/strukturart>
 has_tracking: true
@@ -20,6 +20,6 @@ donation: https://paypal.me/strukturart
 meta:
   tags: apps;
   categories: 
-   - tools
+   - Utility
 type: certified
 
