--- a/apps/fooplot.yml
+++ b/apps/fooplot.yml
@@ -14,7 +14,7 @@ maintainer:  Farooq Karimi Zadeh <hapu@riseup.net>
 has_tracking: false
 has_ads: false
 # donation is optional
-donation: http://bitcoinshell.mooo.com/users/farooqkz/donate.html
+donation: http://far.chickenkiller.com/pages/donate.html
 meta:
   tags: math; mathematics; graphing; plotting; plot; function plot;
   categories: 
