--- a/apps/simplequran.yml
+++ b/apps/simplequran.yml
@@ -14,7 +14,7 @@ maintainer:  Farooq Karimi Zadeh <hapu@riseup.net>
 has_tracking: false
 has_ads: false
 # donation is optional
-donation: http://bitcoinshell.mooo.com/users/farooqkz/donate.html
+donation: http://far.chickenkiller.com/pages/donate.html
 meta:
   tags: quran; koran; islam; islamic-software; quran study tool; study tool;
   categories: 
