--- a/apps/kaicaching.yml
+++ b/apps/kaicaching.yml
@@ -4,8 +4,8 @@ license: GPLv3
 icon: https://raw.githubusercontent.com/canyouswim/Caching-on-Kai/master/application/assets/icons/icons8-geocaching-112.png
 git_repo: https://github.com/canyouswim/Caching-on-Kai
 download:
-  url: https://github.com/canyouswim/Caching-on-Kai/raw/master/build/caching-on-kai.zip
-  version: "1.0.1"
+  url: https://github.com/canyouswim/Caching-on-Kai/releases/download/v1.0.2/caching-on-kai.zip
+  version: "1.0.2"
 type: privileged
 author: CanYouSwim
 maintainer: CanYouSwim
