--- a/_generator/package.json
+++ b/_generator/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "ajv": "^6.12.6",
     "follow-redirects": "^1.13.0",
     "fs-extra": "^8.1.0",
     "is-url-superb": "^3.0.0",
