--- a/apps/wheelcal.yml
+++ b/apps/wheelcal.yml
@@ -1,4 +1,4 @@
-name: K-Loan
+name: wheelCal
 description: Car wheel size calculation and comparison.
 icon: "https://ays-arts.de/public/wheelcal/wheelcal_112.png"
 screenshots:
