--- a/apps/dottris.yml
+++ b/apps/dottris.yml
@@ -3,7 +3,7 @@ description: The first KaiOS tetris game under 4096 bytes (unpacked)
 icon: https://i.imgur.com/2WimOw9.png
 download:
   url: https://cloud.disroot.org/s/asw6HeAoBktfzkE/download
-  version: 0.1
+  version: "0.1"
 type: packaged
 license: Unlicense <https://unlicense.org/>
 author: Luxferre
