add the Snake game from the Nokia 8110 4G

--- a/apps/snek.yml
+++ b/apps/snek.yml
@@ -1,5 +1,5 @@
 name: Snake
-description: The Nokia Snake(2017) game found on Nokia KaiOS devices.
+description: The Snake game found on Nokia KaiOS devices.
 icon: "https://cdn.discordapp.com/attachments/813030840526569472/833616686678540358/icon-114.png"
 screenshots:
   - "https://cdn.discordapp.com/attachments/813030840526569472/833628034497380382/unknown.png"
