--- a/apps/b2gfm.yml
+++ b/apps/b2gfm.yml
@@ -3,8 +3,8 @@ description: File Manager & Kloudless app(unofficial) for for KaiOS
 icon: "https://cdn.discordapp.com/attachments/472144650128457738/839176477325000734/b2gffff.png"
 website: "https://github.com/arma7x/b2gfm"
 download:
-  url: "https://cdn.discordapp.com/attachments/472144650128457738/834881587064733766/b2gfm.zip"
-  version: "1.2.0"
+  url: "https://gitlab.com/cyan2048/snek/-/raw/master/b2gfm.zip?inline=false"
+  version: "1.2.1"
 type: privileged
 license: MIT
 author: arma7x <arma7x@live.com>
