--- a/apps/ktodoist.yml
+++ b/apps/ktodoist.yml
@@ -3,8 +3,8 @@ description: K-Todoist is a unoffical Todoist client for KaiOS
 icon: "https://cdn.discordapp.com/attachments/472144650128457738/839173492028866571/todotodo.png"
 website: "https://github.com/arma7x/k-todoist"
 download:
-  url: "https://cdn.discordapp.com/attachments/472144650128457738/834876680615100436/k-todoist.zip"
-  version: "1.0.2"
+  url: "https://gitlab.com/cyan2048/snek/-/raw/master/k-todoist.zip?inline=false"
+  version: "1.0.3"
 type: privileged
 license: MIT
 author: arma7x <arma7x@live.com>
