--- a/apps/ajedrez.yml
+++ b/apps/ajedrez.yml
@@ -2,6 +2,11 @@ name: K-Chess
 description: K-Chess is unofficial lichess.org client for KaiOS
 icon: "https://raw.githubusercontent.com/arma7x/kai-chess/master/icon.png"
 website: "https://github.com/arma7x/kai-chess"
+screenshots:
+  - "https://cdn.discordapp.com/attachments/472144650128457738/843903502043447327/VQ2PUi1daAAAAAElFTkSuQmCC.png"
+  - "https://cdn.discordapp.com/attachments/472144650128457738/843903423909068820/wN46FnCd8oKgAAAAABJRU5ErkJggg.png"
+  - "https://cdn.discordapp.com/attachments/472144650128457738/843902139041841212/4LfCWLRcXDay8AAAAASUVORK5CYII.png"
+  - "https://cdn.discordapp.com/attachments/472144650128457738/843902427769208912/cC7NadQ7ZRAAAAABJRU5ErkJggg.png"
 download:
   url: "https://gitlab.com/cyan2048/snek/-/raw/master/ajedrez.zip?inline=false"
   version: "1.1.1"
